--- a/package.json
+++ b/package.json
@@ -11,14 +11,20 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "@rainbow-me/rainbowkit": "^1.0.6",
     "bootstrap": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sass": "^1.63.6"
+    "sass": "^1.63.6",
+    "typewriter-effect": "^2.20.1",
+    "viem": "^1.2.15",
+    "wagmi": "^1.3.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react-swc": "^3.3.2",
     "eslint": "^8.44.0",
     "eslint-plugin-react": "^7.32.2",
