--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@popperjs/core": "^2.11.8",
     "@rainbow-me/rainbowkit": "^1.0.6",
     "bootstrap": "^5.3.0",
+    "iron-session": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.63.6",
+    "siwe": "^2.1.4",
     "typewriter-effect": "^2.20.1",
     "viem": "^1.2.15",
     "wagmi": "^1.3.8"
