--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "iron-session": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.2",
     "sass": "^1.63.6",
     "siwe": "^2.1.4",
     "typewriter-effect": "^2.20.1",
