--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-router-dom": "^6.14.2",
     "sass": "^1.63.6",
     "siwe": "^2.1.4",
+    "truffle-contract": "^4.0.31",
+    "truffle-contract-loader": "^1.0.7",
     "typewriter-effect": "^2.20.1",
     "viem": "^1.2.15",
     "wagmi": "^1.3.8"
