--- a/package.json
+++ b/package.json
@@ -14,17 +14,21 @@
     "@popperjs/core": "^2.11.8",
     "@rainbow-me/rainbowkit": "^1.0.6",
     "@truffle/hdwallet-provider": "^2.1.13",
+    "antd": "^5.9.0",
     "bootstrap": "^5.3.0",
     "dotenv": "^16.3.1",
     "husky": "^8.0.3",
     "iron-session": "^6.3.1",
+    "prettier": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
+    "react-tsparticles": "^2.12.2",
     "sass": "^1.63.6",
     "siwe": "^2.1.4",
     "truffle-contract": "^4.0.31",
     "truffle-contract-loader": "^1.0.7",
+    "tsparticles-preset-sea-anemone": "^2.12.0",
     "typewriter-effect": "^2.20.1",
     "viem": "^1.2.15",
     "wagmi": "^1.3.8"
